package interfaces;

public interface IMovible {
    public void mover();
}
